<resources>
    <string name="app_name">MovieFlicks</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="more_info">More Info</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Any Movie</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date:</string>
    <string name="temp">Temp</string>
    <string name="last_air_date">Last airing date:</string>
    <string name="cast">Cast:</string>
    <string name="genre">Genres:</string>
    <string name="networks">Shown on:</string>
    <string name="seasons">Seasons:</string>
    <string name="episodes">Episodes:</string>
    <string name="showtimes">Show times</string>
    <string name="date">Date:</string>
    <string name="tickets">Tickets:</string>
    <string name="specs">Specifics:</string>
    <string name="title_location_permission">Need Location</string>
    <string name="text_location_permission">App needs your current location to get nearby movies</string>
    <string name="ok">Ok</string>
</resources>
